<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.activity.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/main_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/update_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/update"
                    android:contentDescription="@string/update_btn_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/label_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/description_weather"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_main_icon_weather"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/temperature"
                app:srcCompat="@drawable/cloudy" />

            <TextView
                android:id="@+id/label_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/default_date_time"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/label_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_temp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="63sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/converter_layout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/convert_to_fahrenheit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@drawable/background_card"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:text="@string/convert_to_fahrenheit_btn_label" />

                <Button
                    android:id="@+id/convert_to_celsius_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/background_card"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:text="@string/convert_to_celsius_btn_label" />

                <Button
                    android:id="@+id/convert_to_kelvin_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@drawable/background_card"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:text="@string/convert_to_kelvin_btn_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/background_card"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/wind_value_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_wind_value"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/descrip_value"
                        app:srcCompat="@drawable/wind" />

                    <TextView
                        android:id="@+id/text_label_wind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_label"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_value_wind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/humidity_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_humidity_value"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/descrip_value"
                        app:srcCompat="@drawable/humidity" />

                    <TextView
                        android:id="@+id/text_label_humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity_label"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_value_humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_today"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/today_label"
                    android:textColor="#DCA900"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_view_week"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="10dp"
                android:paddingEnd="16dp" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>